--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-      <title>Baggage Claim</title>
+    <title>Baggage Claim Registry</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
@@ -28,37 +28,26 @@
       <div class="container-fluid" style="background-color:white; height: 900px; width: 1400px;">
 <!-- Container begins-->
 <!-- Row 1 begins-->
-        <div class="row" style="background-color:green;">
-          <div class="col-md-12" style="background-color:#ADD8E6;">
-            <!-- Insert App summary descriptions and Endorement statements/quotes -->
-            <!-- Insert SIGN UP Button here -->
-            <br>
-            <p>A travel app that allows you to track all of your possessions from destination to destination.</p>
-            <br>
-            <br>
-            <br>
-            <div class="d-flex justify-content-center">
-              <p>Sign up for Baggage Claim Today!</p>
-            </div>
-          </div>
-        </div><!--end of Row 1-->
-<!-- Row 2 begins-->
         <div class="row" style="background-color:silver;">
-          <div class="col-md-12" style="background-color:#ADD8E6;">
-            <div class="d-flex justify-content-center">
-              <button class="p-3" href="register.html">SIGN UP HERE</button>
-            </div>
+<!-- Row 1 Col1 begins-->
+          <div class="col-md-8" style="background-color:white;">
+            <!-- Insert Inventory Array-->
+            <p>Email: </p>
+            <p>Username: </p>
+            <p>Password: </p>
+            <p>Confirm Password: </p>
           </div>
-        </div> <!--end of Row 2-->
-<!-- Row 3 begins-->
+<!-- Row 1 Col2 begins-->
+          <div class="col-md-4" style="background-color:#ADD8E6;">
+            <img src="" alt="image of suitcase missing">
+          </div>
+        </div>
+<!--end of Row 1-->
+<!-- Row 2 begins-->
         <div class="row" style="background-color:red;">
           <div class="col-md-12" style="background-color:#ADD8E6;">
-            <div>
-              <br>
-              <p>“Ever rush from hotel room to hotel room and forget your phone charger?!”</p>
-              <br>
-              <p>“Still kicking yourself for forgetting grandma’s pearls in Italy last year?</p>
-              <br>
+            <div class="d-flex justify-content-center">
+              <button class="p-3" href="#">SUBMIT</button>
             </div>
           </div>
         </div><!--end of row 3-->
@@ -66,7 +55,7 @@
 <!-- Row 4/FOOTER begins-->
         <div class="row">
           <div class="col-md-12">
-            <div class="fixed-bottom d-flex justify-content-center p-3" id="footer"><br>2017@Copyright Baggage Claim<br>
+            <div class="fixed-bottom d-flex justify-content-center p-3"><br>2017@Copyright Baggage Claim<br>
             </div>
           </div>
         </div><!--end of row 4/FOOTER-->
