--- a/index.html
+++ b/index.html
@@ -2,75 +2,76 @@
 <html>
   <head>
     <meta charset="UTF-8">
-      <title>Baggage Claim</title>
+    <title>Baggage Claim</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
   </head>
-  <body>
-    <body style="background-color:orange; height: 1100px;">
+  <body style="background-color: orange;">
 <!-- HEADER/NAV Bar begins-->
-      <nav class="navbar navbar-expand-md navbar-light bg-light d-flex p-2">
-          <div class="p-2">
-            <a class="navbar-brand" href="index.html"><img src="./images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="logo missing">Baggage Claim</a>
-            <!--insert logo img-->
+    <nav class="navbar navbar-expand-md navbar-light bg-light d-flex p-2">
+        <div class="p-2">
+          <a class="navbar-brand" href="index.html"><img src="./images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="logo missing">Baggage Claim</a>
+          <!--insert logo img-->
+        </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ml-auto p-2">
+            <a class="nav-item nav-link" href="suitcase.html">Login</a>
           </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ml-auto p-2">
-              <a class="nav-item nav-link" href="register.html">Login</a>
-            </div>
-          </div>
-      </nav>
+        </div>
+    </nav>
 <!-- HEADER/NAV Bar ends-->
-      <div class="container-fluid" style="background-color:white; height: 900px; width: 1400px;">
+    <div class="container-fluid box" style="background-color:white; height: 900px; width: 1400px;">
 <!-- Container begins-->
 <!-- Row 1 begins-->
-        <div class="row" style="background-color:green;">
-          <div class="col-md-12" style="background-color:#ADD8E6;">
-            <!-- Insert App summary descriptions and Endorement statements/quotes -->
-            <!-- Insert SIGN UP Button here -->
-            <br>
-            <p>A travel app that allows you to track all of your possessions from destination to destination.</p>
-            <br>
-            <br>
-            <br>
-            <div class="d-flex justify-content-center">
-              <p>Sign up for Baggage Claim Today!</p>
-            </div>
+      <div class="row" style="background-color:green;">
+        <div class="col-md-12" style="background-color:#ADD8E6;">
+          <!-- Insert App summary descriptions and Endorement statements/quotes -->
+          <!-- Insert SIGN UP Button here -->
+          <br>
+          <p>A travel app that allows you to track all of your possessions from destination to destination.</p>
+          <br>
+          <br>
+          <br>
+          <div class="d-flex justify-content-center">
+            <p>Sign up for Baggage Claim Today!</p>
           </div>
-        </div><!--end of Row 1-->
+        </div>
+      </div><!--end of Row 1-->
 <!-- Row 2 begins-->
-        <div class="row" style="background-color:silver;">
-          <div class="col-md-12" style="background-color:#ADD8E6;">
-            <div class="d-flex justify-content-center">
-              <button class="p-3" href="register.html">SIGN UP HERE</button>
-            </div>
+      <div class="row" style="background-color:silver;">
+        <div class="col-md-12" style="background-color:#ADD8E6;">
+          <div class="d-flex justify-content-center">
+            <form class="p-3" action="register.html">
+              <input type="submit" value="SIGN UP HERE"/>
+            </form>
           </div>
-        </div> <!--end of Row 2-->
+        </div>
+      </div> <!--end of Row 2-->
 <!-- Row 3 begins-->
-        <div class="row" style="background-color:red;">
-          <div class="col-md-12" style="background-color:#ADD8E6;">
-            <div>
-              <br>
-              <p>“Ever rush from hotel room to hotel room and forget your phone charger?!”</p>
-              <br>
-              <p>“Still kicking yourself for forgetting grandma’s pearls in Italy last year?</p>
-              <br>
-            </div>
+      <div class="row" style="background-color:red;">
+        <div class="col-md-12" style="background-color:#ADD8E6;">
+          <div>
+            <br>
+            <p>“Ever rush from hotel room to hotel room and forget your phone charger?!”</p>
+            <br>
+            <p>“Still kicking yourself for forgetting grandma’s pearls in Italy last year?</p>
+            <br>
           </div>
-        </div><!--end of row 3-->
+        </div>
+      </div><!--end of row 3-->
 <!--end of Row 3-->
 <!-- Row 4/FOOTER begins-->
-        <div class="row">
-          <div class="col-md-12">
-            <div class="fixed-bottom d-flex justify-content-center p-3" id="footer"><br>2017@Copyright Baggage Claim<br>
-            </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="fixed-bottom d-flex justify-content-center p-3" id="footer"><br>2017@Copyright Baggage Claim<br>
           </div>
-        </div><!--end of row 4/FOOTER-->
-      </div><!--end of container-->
+        </div>
+      </div><!--end of row 4/FOOTER-->
+    </div><!--end of container-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   </body>
 </html>
