--- a/suitcase.html
+++ b/suitcase.html
@@ -7,75 +7,75 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
   </head>
-  <body>
-    <body style="background-color:orange; height: 1100px;">
+  <body style="background-color: orange;">
+
 <!-- HEADER/NAV Bar begins-->
-      <nav class="navbar navbar-expand-md navbar-light bg-light d-flex p-2">
-          <div class="p-2">
-            <a class="navbar-brand" href="index.html"><img src="./images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="logo missing">My Virtual Suitcase</a>
-            <!--insert logo img-->
-          </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ml-auto p-2">
-              <a class="nav-item nav-link" href="register.html">Login</a>
-            </div>
-          </div>
-      </nav>
-<!-- HEADER/NAV Bar ends-->
-      <div class="container-fluid" style="background-color:white; height: 900px; width: 1400px;">
-<!-- Container begins-->
-<!-- Row 1 begins-->
-        <div class="row" style="background-color:#ADD8E6;">
-<!-- Row 2 Col1 begins-->
-          <div class="col-md-3" style="background-color:white;">
-            <!-- Insert Inventory Array-->
-            <ol>
-              <li>Shoes</li>
-              <li>iPhone</li>
-              <li>Crap</li>
-              <li>dog</li>
-              <li>cat</li>
-              <li>mouse</li>
-            </ol>
-          </div>
-<!-- Row 2 Col2 begins-->
-          <div class="col-md-9 d-flex justify-content-center p-3" style="background-color:#ADD8E6;">
-            <!-- Suitcase Animation-->
-            <img src="" alt="giant suitcase image missing">
+    <nav class="navbar navbar-expand-md navbar-light bg-light d-flex p-2">
+        <div class="p-2">
+          <a class="navbar-brand" href="index.html"><img src="./images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="logo missing">My Virtual Suitcase</a>
+          <!--insert logo img-->
+        </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ml-auto p-2">
+            <a class="nav-item nav-link" href="register.html">Login</a>
           </div>
         </div>
+    </nav>
+<!-- HEADER/NAV Bar ends-->
+    <div class="container-fluid" style="background-color:white; height: 900px; width: 1400px;">
+<!-- Container begins-->
+<!-- Row 1 begins-->
+      <div class="row" style="background-color:#ADD8E6;">
+<!-- Row 2 Col1 begins-->
+        <div class="col-md-3" style="background-color:white;">
+          <!-- Insert Inventory Array-->
+          <ol>
+            <li>Shoes</li>
+            <li>iPhone</li>
+            <li>Crap</li>
+            <li>dog</li>
+            <li>cat</li>
+            <li>mouse</li>
+          </ol>
+        </div>
+<!-- Row 2 Col2 begins-->
+        <div class="col-md-9 d-flex justify-content-center p-3" style="background-color:#ADD8E6;">
+          <!-- Suitcase Animation-->
+          <img src="" alt="giant suitcase image missing">
+        </div>
+      </div>
 <!--end of Row 2-->
 <!-- Row 3 begins-->
-        <div class="row" style="background-color:#ADD8E6;">
-          <div class="col-md-6" style="background-color:#ADD8E6;">
-            <div class="d-flex justify-content-center">
-              <!-- 3 Items in first column-->
-              <button class="p-3" href="#">ADD ITEM BUTTON</button>
-              <button class="p-3" href="#">ADD ITEM BUTTON</button>
-              <button class="p-3" href="#">ADD ITEM BUTTON</button>
-            </div>
+      <div class="row" style="background-color:#ADD8E6;">
+        <div class="col-md-6" style="background-color:#ADD8E6;">
+          <div class="d-flex justify-content-center">
+            <!-- 3 Items in first column-->
+            <button class="p-3" href="#">ADD ITEM BUTTON</button>
+            <button class="p-3" href="#">ADD ITEM BUTTON</button>
+            <button class="p-3" href="#">ADD ITEM BUTTON</button>
           </div>
-          <div class="col-md-6" style="background-color:#ADD8E6;">
-            <div class="d-flex justify-content-center">
-              <!-- 3 Items in second column-->
-              <button class="p-3" href="#">ADD ITEM BUTTON</button>
-              <button class="p-3" href="#">ADD ITEM BUTTON</button>
-              <button class="p-3" href="#">ADD ITEM BUTTON</button>
-            </div>
+        </div>
+        <div class="col-md-6" style="background-color:#ADD8E6;">
+          <div class="d-flex justify-content-center">
+            <!-- 3 Items in second column-->
+            <button class="p-3" href="#">ADD ITEM BUTTON</button>
+            <button class="p-3" href="#">ADD ITEM BUTTON</button>
+            <button class="p-3" href="#">ADD ITEM BUTTON</button>
           </div>
-        </div><!--end of row 3-->
+        </div>
+      </div><!--end of row 3-->
 <!--end of Row 3-->
 <!-- Row 4/FOOTER begins-->
-        <div class="row">
-          <div class="col-md-12">
-            <div class="fixed-bottom d-flex justify-content-center p-3"><br>2017@Copyright Baggage Claim<br>
-            </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="fixed-bottom d-flex justify-content-center p-3"><br>2017@Copyright Baggage Claim<br>
           </div>
-        </div><!--end of row 4/FOOTER-->
-      </div><!--end of container-->
+        </div>
+      </div><!--end of row 4/FOOTER-->
+    </div><!--end of container-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   </body>
 </html>
