--- a/suitcase.html
+++ b/suitcase.html
@@ -5,7 +5,7 @@
     <title>Baggage Claim | Virtual Suitcase</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link rel="stylesheet" href="./css/stylesheet.css" type="text/css">
   </head>
   <body style="background-color: orange;">
 
@@ -25,57 +25,99 @@
         </div>
     </nav>
 <!-- HEADER/NAV Bar ends-->
-    <div class="container-fluid" style="background-color:white; height: 900px; width: 1400px;">
+    <div class="container-fluid" style="background-color:white; width: 1400px;">
 <!-- Container begins-->
 <!-- Row 1 begins-->
       <div class="row" style="background-color:#ADD8E6;">
-<!-- Row 2 Col1 begins-->
-        <div class="col-md-3" style="background-color:white;">
-          <!-- Insert Inventory Array-->
-          <ol>
-            <li>Shoes</li>
-            <li>iPhone</li>
-            <li>Crap</li>
-            <li>dog</li>
-            <li>cat</li>
-            <li>mouse</li>
-          </ol>
+<!-- Row 2 Col1 INVENTORY begins-->
+        <div class="col-md-3" id="tasks" style="background-color:#ADD8E6;">
+          <h1 style="background-color:#ADD8E6;">INVENTORY</h1>
+          <!-- Inventory Array-->
         </div>
 <!-- Row 2 Col2 begins-->
         <div class="col-md-9 d-flex justify-content-center p-3" style="background-color:#ADD8E6;">
           <!-- Suitcase Animation-->
           <img src="" alt="giant suitcase image missing">
         </div>
-      </div>
-<!--end of Row 2-->
-<!-- Row 3 begins-->
+      </div><!--end of Row 2-->
+      <!-- Row 3 begins-->
+            <div class="row" style="background-color:#ADD8E6;">
+              <div class="col-md-12" style="background-color:#ADD8E6;">
+                <div class="d-flex justify-content-center">
+                  <input id="new-task" type="text">
+                  <button id="add">Add!</button>
+                  <br>
+                </div>
+              </div>
+            </div><!--end of row 3-->
+<!-- Row 4 begins-->
       <div class="row" style="background-color:#ADD8E6;">
         <div class="col-md-6" style="background-color:#ADD8E6;">
           <div class="d-flex justify-content-center">
-            <!-- 3 Items in first column-->
-            <button class="p-3" href="#">ADD ITEM BUTTON</button>
-            <button class="p-3" href="#">ADD ITEM BUTTON</button>
-            <button class="p-3" href="#">ADD ITEM BUTTON</button>
+            <ul style="list-style-type: none;">
+              <li>
+                <input id="cell-task" type="text" value="Cell Phone">
+                <img width="50px" height="50px" alt="missing img" src="./images/cellPhone.jpg">
+                <button id="add">Add!</button>
+              </li>
+              <li>
+                <input id="new-task" type="text" value ="Shoes">
+                <img width="50px" height="50px" alt="missing img" src="./images/runningShoes.jpg">
+                <button class="justify-content-center" id="add">Add!</button>
+              </li>
+              <li>
+                <input id="new-task" type="text" value="Watch">
+                <img width="50px" height="50px" alt="missing img" src="./images/watch.jpg">
+                <button class="justify-content-center" id="add">Add!</button>
+              </li>
+            </ul>
           </div>
         </div>
         <div class="col-md-6" style="background-color:#ADD8E6;">
           <div class="d-flex justify-content-center">
-            <!-- 3 Items in second column-->
-            <button class="p-3" href="#">ADD ITEM BUTTON</button>
-            <button class="p-3" href="#">ADD ITEM BUTTON</button>
-            <button class="p-3" href="#">ADD ITEM BUTTON</button>
+            <ul style="list-style-type: none;">
+              <li>
+                <input id="new-task" type="text" value="Laptop Charger">
+                <img width="50px" height="50px" alt="missing img" src="./images/laptopCharger.jpg">
+                <button class="justify-content-center" id="add">Add!</button>
+              </li>
+              <li>
+                <input id="new-task" type="text" value="Earings">
+                <img width="50px" height="50px" alt="missing img" src="./images/earrings.jpg">
+                <button class="justify-content-center" id="add">Add!</button>
+              </li>
+              <li>
+                <input id="new-task" type="text" value="Phone Charger">
+                <img width="50px" height="50px" alt="missing img" src="./images/phoneCharger.jpg">
+                <button class="justify-content-center" id="add">Add!</button>
+              </li>
+            </ul>
           </div>
         </div>
       </div><!--end of row 3-->
-<!--end of Row 3-->
-<!-- Row 4/FOOTER begins-->
+<!--end of Row 4-->
+<!-- Row 5 begins-->
+      <div class="row" style="background-color:#ADD8E6;">
+        <div class="col-md-6" style="background-color:#ADD8E6;">
+          <div class="d-flex justify-content-center">
+            <br>
+          </div>
+        </div>
+        <div class="col-md-6" style="background-color:#ADD8E6;">
+          <div class="d-flex justify-content-center">
+            <br>
+          </div>
+        </div>
+      </div><!--end of row 5-->
+<!-- Row 6/FOOTER begins-->
       <div class="row">
         <div class="col-md-12">
           <div class="fixed-bottom d-flex justify-content-center p-3"><br>2017@Copyright Baggage Claim<br>
           </div>
         </div>
-      </div><!--end of row 4/FOOTER-->
+      </div><!--end of row 6/FOOTER-->
     </div><!--end of container-->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./javascript/site.js"></script>
   </body>
 </html>
