--- a/suitcase.html
+++ b/suitcase.html
@@ -1,71 +1,85 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <title>Baggage Claim | Virtual Suitcase</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/vnd.microsoft.icon">
+    <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/stylesheet.css" type="text/css">
   </head>
-  <body style="background-color: orange;">
-
-<!-- HEADER/NAV Bar begins-->
-    <nav class="navbar navbar-expand-md navbar-light bg-light d-flex p-2">
-        <div class="p-2">
-          <a class="navbar-brand" href="index.html"><img src="./images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="logo missing">My Virtual Suitcase</a>
-          <!--insert logo img-->
+  <body>
+<!--Navigation Total Page -->
+    <div id="myNavbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div>
+          <button class="btn btn-info">
+            <div class="collapse navbar-collapse d-flex justify-content-start" id="navbarNavAltMarkup">
+              <div class="navbar-nav ml-auto p-2">
+                <a class="nav-item nav-link" href="register.html" style="color: white" >Login</a>
+              </div>
+            </div>
+          </button>
         </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ml-auto p-2">
-            <a class="nav-item nav-link" href="register.html">Login</a>
-          </div>
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="index.html" class="navbar-brand"> Baggage Claim </a>
         </div>
-    </nav>
-<!-- HEADER/NAV Bar ends-->
-    <div class="container-fluid" style="background-color:white; width: 1400px;">
-<!-- Container begins-->
-<!-- Row 1 begins-->
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#header"> Home </a></li>
+            <li><a href="#contact"> Contact </a></li>
+          </ul>
+        </div>
+      </div>
+    </div>    <!-- End Navigation -->
+<!-- Main Container begins-->
+    <div class="container">
       <div class="row" style="background-color:#ADD8E6;">
-<!-- Row 2 Col1 INVENTORY begins-->
-        <div class="col-md-3" id="tasks" style="background-color:#ADD8E6;">
-          <h1 style="background-color:#ADD8E6;">INVENTORY</h1>
+<!-- Row 1 Col1 INVENTORY begins-->
+        <div class="col-md-3" id="tasks">
+          <h1>INVENTORY</h1>
           <!-- Inventory Array-->
         </div>
-<!-- Row 2 Col2 begins-->
-        <div class="col-md-9 d-flex justify-content-center p-3" style="background-color:#ADD8E6;">
+<!-- Row 1 Col2 begins-->
+        <div class="col-md-9 d-flex justify-content-center p-3" style="background-color:#ADD8E6; height:400px;">
           <!-- Suitcase Animation-->
           <img src="" alt="giant suitcase image missing">
         </div>
-      </div><!--end of Row 2-->
-      <!-- Row 3 begins-->
-            <div class="row" style="background-color:#ADD8E6;">
-              <div class="col-md-12" style="background-color:#ADD8E6;">
-                <div class="d-flex justify-content-center">
-                  <input id="new-task" type="text">
-                  <button id="add">Add!</button>
-                  <br>
-                </div>
-              </div>
-            </div><!--end of row 3-->
-<!-- Row 4 begins-->
+      </div><!--end of Row 1-->
+        <div class="row" style="background-color:#ADD8E6;">
+          <div class="col-md-12" style="background-color:#ADD8E6;">
+            <div class="d-flex justify-content-center">
+              <input id="new-task" type="text">
+              <button id="add">Add!</button>
+              <br>
+            </div>
+            <br>
+            <p class="d-flex justify-content-center">Enter your own custom items to the list or Click next to the icons for pre-loaded items:</p>
+            <br>
+          </div>
+        </div><!--end of row 2-->
       <div class="row" style="background-color:#ADD8E6;">
         <div class="col-md-6" style="background-color:#ADD8E6;">
-          <div class="d-flex justify-content-center">
+          <div>
             <ul style="list-style-type: none;">
-              <li>
+              <li class="d-flex justify-content-center">
                 <input id="cell-task" type="text" value="Cell Phone">
                 <img width="50px" height="50px" alt="missing img" src="./images/cellPhone.jpg">
                 <button id="add">Add!</button>
               </li>
-              <li>
+              <br>
+              <li class="d-flex justify-content-center">
                 <input id="new-task" type="text" value ="Shoes">
                 <img width="50px" height="50px" alt="missing img" src="./images/runningShoes.jpg">
                 <button class="justify-content-center" id="add">Add!</button>
               </li>
-              <li>
+              <br>
+              <li class="d-flex justify-content-center">
                 <input id="new-task" type="text" value="Watch">
                 <img width="50px" height="50px" alt="missing img" src="./images/watch.jpg">
                 <button class="justify-content-center" id="add">Add!</button>
@@ -74,19 +88,21 @@
           </div>
         </div>
         <div class="col-md-6" style="background-color:#ADD8E6;">
-          <div class="d-flex justify-content-center">
+          <div>
             <ul style="list-style-type: none;">
-              <li>
+              <li class="d-flex justify-content-center">
                 <input id="new-task" type="text" value="Laptop Charger">
                 <img width="50px" height="50px" alt="missing img" src="./images/laptopCharger.jpg">
                 <button class="justify-content-center" id="add">Add!</button>
               </li>
-              <li>
+              <br>
+              <li class="d-flex justify-content-center">
                 <input id="new-task" type="text" value="Earings">
                 <img width="50px" height="50px" alt="missing img" src="./images/earrings.jpg">
                 <button class="justify-content-center" id="add">Add!</button>
               </li>
-              <li>
+              <br>
+              <li class="d-flex justify-content-center">
                 <input id="new-task" type="text" value="Phone Charger">
                 <img width="50px" height="50px" alt="missing img" src="./images/phoneCharger.jpg">
                 <button class="justify-content-center" id="add">Add!</button>
@@ -95,8 +111,7 @@
           </div>
         </div>
       </div><!--end of row 3-->
-<!--end of Row 4-->
-<!-- Row 5 begins-->
+<!-- Row 4 begins-->
       <div class="row" style="background-color:#ADD8E6;">
         <div class="col-md-6" style="background-color:#ADD8E6;">
           <div class="d-flex justify-content-center">
@@ -108,14 +123,14 @@
             <br>
           </div>
         </div>
-      </div><!--end of row 5-->
-<!-- Row 6/FOOTER begins-->
+      </div><!--end of row 4-->
+<!-- Row 5/FOOTER begins-->
       <div class="row">
         <div class="col-md-12">
           <div class="fixed-bottom d-flex justify-content-center p-3"><br>2017@Copyright Baggage Claim<br>
           </div>
         </div>
-      </div><!--end of row 6/FOOTER-->
+      </div><!--end of row 5/FOOTER-->
     </div><!--end of container-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./javascript/site.js"></script>
