post unification merged files v2

--- a/register.html
+++ b/register.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./css/stylesheet.css" type="text/css">
     <link rel="shortcut icon" href="./images/logo.png" type="image/vnd.microsoft.icon">
   </head>
-  <body style="background-color: orange;">
+  <body>
 <!-- HEADER/NAV Bar begins-->
     <nav class="navbar navbar-expand-md navbar-light bg-light d-flex p-2">
-        <div class="p-2">
-          <a class="navbar-brand" href="index.html"><img src="./images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="logo missing">Baggage Claim</a>
+        <div class="p-3">
+          <a class="navbar-brand" href="index.html"><img style="margin-right:10px" src="./images/logo1.png" width="30" height="30" class="d-inline-block align-top" alt="logo missing">Baggage Claim</a>
           <!--insert logo img-->
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
