--- a/suitcase.html
+++ b/suitcase.html
@@ -9,34 +9,22 @@
     <link rel="stylesheet" href="./css/stylesheet.css" type="text/css">
   </head>
   <body>
-<!--Navigation Total Page -->
-    <div id="myNavbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div>
-          <button class="btn btn-info">
-            <div class="collapse navbar-collapse d-flex justify-content-start" id="navbarNavAltMarkup">
+    <!-- HEADER/NAV Bar begins-->
+        <nav class="navbar navbar-expand-md navbar-light bg-light d-flex p-2">
+            <div class="p-3">
+              <a class="navbar-brand" href="index.html"><img style="margin-right:10px" src="./images/logo1.png" width="30" height="30" class="d-inline-block align-top" alt="logo missing">Baggage Claim</a>
+              <!--insert logo img-->
+            </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ml-auto p-2">
-                <a class="nav-item nav-link" href="register.html" style="color: white" >Login</a>
+                <a class="nav-item nav-link" href="suitcase.html">Login</a>
               </div>
             </div>
-          </button>
-        </div>
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a href="index.html" class="navbar-brand"> Baggage Claim </a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#header"> Home </a></li>
-            <li><a href="#contact"> Contact </a></li>
-          </ul>
-        </div>
-      </div>
-    </div>    <!-- End Navigation -->
+        </nav>
+    <!-- HEADER/NAV Bar ends-->
 <!-- Main Container begins-->
     <div class="container">
       <div class="row" style="background-color:#ADD8E6;">
@@ -48,7 +36,7 @@
 <!-- Row 1 Col2 begins-->
         <div class="col-md-9 d-flex justify-content-center p-3" style="background-color:#ADD8E6; height:400px;">
           <!-- Suitcase Animation-->
-          <img src="" alt="giant suitcase image missing">
+          <img src="" alt="giant animated suitcase missing">
         </div>
       </div><!--end of Row 1-->
         <div class="row" style="background-color:#ADD8E6;">
