Inventory buttons complete

--- a/suitcase.html
+++ b/suitcase.html
@@ -58,19 +58,19 @@
               <li class="d-flex justify-content-center">
                 <input id="cell-task" type="text" value="Cell Phone">
                 <img width="50px" height="50px" alt="missing img" src="./images/cellPhone.jpg">
-                <button id="cellphone">Add!</button>
+                <button class="justify-content-center" value="Cell Phone">Add!</button>
               </li>
               <br>
               <li class="d-flex justify-content-center">
                 <input id="new-task" type="text" value ="Shoes">
                 <img width="50px" height="50px" alt="missing img" src="./images/runningShoes.jpg">
-                <button class="justify-content-center" value="Running Shoes" id="runningShoes">Add!</button>
+                <button class="justify-content-center" value="Shoes">Add!</button>
               </li>
               <br>
               <li class="d-flex justify-content-center">
                 <input id="new-task" type="text" value="Watch">
                 <img width="50px" height="50px" alt="missing img" src="./images/watch.jpg">
-                <button class="justify-content-center" id="watch">Add!</button>
+                <button class="justify-content-center" value="Watch">Add!</button>
               </li>
             </ul>
           </div>
@@ -81,19 +81,19 @@
               <li class="d-flex justify-content-center">
                 <input id="new-task" type="text" value="Laptop Charger">
                 <img width="50px" height="50px" alt="missing img" src="./images/laptopCharger.jpg">
-                <button class="justify-content-center" id="computerCharger">Add!</button>
+                <button class="justify-content-center" value="Laptop Charger">Add!</button>
               </li>
               <br>
               <li class="d-flex justify-content-center">
-                <input id="new-task" type="text" value="Earings">
+                <input id="new-task" type="text" value="Earrings">
                 <img width="50px" height="50px" alt="missing img" src="./images/earrings.jpg">
-                <button class="justify-content-center" id="earring">Add!</button>
+                <button class="justify-content-center" value="Earrings">Add!</button>
               </li>
               <br>
               <li class="d-flex justify-content-center">
                 <input id="new-task" type="text" value="Phone Charger">
                 <img width="50px" height="50px" alt="missing img" src="./images/phoneCharger.jpg">
-                <button class="justify-content-center" id="phoneCharger">Add!</button>
+                <button class="justify-content-center" value="Phone Charger">Add!</button>
               </li>
             </ul>
           </div>
