--- a/suitcase.html
+++ b/suitcase.html
@@ -56,7 +56,7 @@
           <div>
             <ul style="list-style-type: none;">
               <li class="d-flex justify-content-center">
-                <input id="cell-task" type="text" value="Cell Phone">
+                <input id="new-task" type="text" value="Cell Phone">
                 <img width="50px" height="50px" alt="missing img" src="./images/cellPhone.jpg">
                 <button class="justify-content-center" value="Cell Phone">Add!</button>
               </li>
